Edited header and hero section
Refine header and hero section skeleton to match with the final design. Made CSS classes simple and concise in index.html for cleaner CSS declarations in styles.css.

--- a/index.html
+++ b/index.html
@@ -8,26 +8,22 @@
 
   <body>
     <!-- Header -->
-    <header class="header-container dark-bg">
-      <img
-        class="header-item logo"
-        src="./images/logo.png"
-        alt="Visit Ireland logo"
-      />
-      <nav class="header-item nav">
+    <header class="container dark-bg">
+      <img class="logo" src="./images/logo.png" alt="Visit Ireland logo" />
+      <nav>
         <ul class="nav-list">
-          <li>Most Visited</li>
-          <li>View Images</li>
-          <li>About</li>
+          <li class="light-txt">See Most Visited Places</li>
+          <li class="light-txt">View Images</li>
+          <li class="light-txt">About</li>
         </ul>
       </nav>
     </header>
 
     <!-- Hero Section -->
-    <div class="hero-container dark-bg">
-      <div class="hero-content">
+    <div class="hero dark-bg">
+      <div class="hero-item content">
         <span class="main">Discover the Magic of Ireland</span>
-        <span class="description"
+        <span class="light-txt"
           >From the rolling green hills to the vibrant city streets, Ireland is
           a land of breathtaking beauty, rich history, and warm hospitality.
           Whether you're hiking through the Cliffs of Moher, exploring ancient
@@ -38,7 +34,7 @@
         <button class="btn">Explore more</button>
       </div>
       <img
-        class="hero-img"
+        class="hero-item img"
         src="./images/hero-img.jpeg"
         alt="Image of Mohera Cliffs on Sea Shore in Ireland"
       />
