Edited information and contact sections, and the footer
Refine information and contact sections to match the final design, along with the CSS class name in both index.html and styles.css. Also, add CSS for the footer.

--- a/index.html
+++ b/index.html
@@ -41,36 +41,32 @@
     </div>
 
     <!-- Information Section -->
-    <div class="info-container">
-      <span class="main">Things to know before you travel</span>
-      <div class="info-content">
-        <div class="info">
+    <div class="info">
+      <span class="title">Things to know before you travel</span>
+      <div class="content">
+        <div class="info-item">
           <img
-            class="info-img"
+            class="img"
             src="./images/airplane-img.jpeg"
             alt="Image of an airplane"
           />
           <span class="detail">How to get here?</span>
         </div>
-        <div class="info">
-          <img
-            class="info-img"
-            src="./images/room-img.jpeg"
-            alt="Image of a room"
-          />
+        <div class="info-item">
+          <img class="img" src="./images/room-img.jpeg" alt="Image of a room" />
           <span class="detail">Where to live?</span>
         </div>
-        <div class="info">
+        <div class="info-item">
           <img
-            class="info-img"
+            class="img"
             src="./images/food-and-drinks-img.jpeg"
             alt="Image of a table with food and drinks"
           />
           <span class="detail">Where to eat?</span>
         </div>
-        <div class="info">
+        <div class="info-item">
           <img
-            class="info-img"
+            class="img"
             src="./images/taxi-img.jpeg"
             alt="Image of a taxi on road"
           />
@@ -80,7 +76,7 @@
     </div>
 
     <!-- User Comment Section -->
-    <div class="user-comment-container light-bg">
+    <div class="user-comment light-bg">
       <span class="comment"
         >"I had the most amazing time exploring Ireland! From the stunning
         landscapes of the Ring of Kerry to the vibrant culture in Dublin, every
@@ -93,20 +89,20 @@
     </div>
 
     <!-- Contact Section -->
-    <div class="contact-container">
-      <div class="contact-content">
+    <div class="contact">
+      <div class="content">
         <span class="main">Get in touch</span>
-        <span class="description"
+        <span class="description light-txt"
           >Have questions or need travel tips? We're here to help you plan your
           perfect Irish escape.</span
         >
       </div>
-      <button class="btn">Contact</button>
+      <button class="btn">Contact us</button>
     </div>
 
     <!-- Footer -->
-    <footer class="footer-container dark-bg">
-      <span>&copy; 2025 Rudra Patel. All rights reserved.</span>
+    <footer class="footer dark-bg">
+      &copy; 2025 Rudra Patel. All rights reserved.
     </footer>
   </body>
 </html>
